# AIDF

./: .gitignore  .gitmodules  CMakeLists.txt  Digital Data Backbone.md  Doxyfile  MIGRATION_COMPLETE.md  README.md  api.html  api_orig.html  branch_intro.md  cliff_meta_skills.json  package.xml  package.xml.bak  package_ros1.xml  package_temp.xml  process_json.py  processed_cliff_meta_skills.json  pyproject.toml  run_frontend.sh  server.py  setup_env.sh  switch_ros_version.sh  test_build_system.sh  test_paths.sh
.github/instructions/: copilot-instructions.md.instructions.md
config/: robot_properties.json  web_message.json
config/ddb/: ddb_localfile.yaml  ddb_ros.yaml
config/general_tasks/: base.json  processed_cliff_meta_skills.json
config/lego_tasks/: calib_history.json  plate_calibration.json  skillgraph.json  skillgraph_backup.json  skillplan.json  user_config.json  user_config_chaitanya.json
config/lego_tasks/assembly_tasks/: big_chair.json  bridge.json  bridge_top.json  chaitanya_test.json  fish_high.json  shift_loc.py  sofa1.json  sofa2.json  sofa3.json  sofa4.json  sofa_full.json  stairs.json  stairs_new.json  stairs_rotated.json  tower.json
config/lego_tasks/env_setup/: env_setup_S_12_13.json  env_setup_big_chair_1_100.json  env_setup_bridge.json  env_setup_chaitanya.json  env_setup_fish.json  env_setup_fish_high.json  env_setup_fish_high_12_14.json  env_setup_gate.json  env_setup_guitar_1_3.json  env_setup_guitar_4_5.json  env_setup_stairs_9_10.json  env_setup_test_swap.json  env_setup_tower.json  env_setup_vessel_1_34.json  env_setup_vessel_33_36.json
config/lego_tasks/robot_properties/: gp4_new_tool_DH.txt  gp4_new_tool_assemble_DH.txt  gp4_new_tool_disassemble_DH.txt  gp4_tool_alt_DH.txt  gp4_tool_alt_assemble_DH.txt  gp4_tool_handover_assemble_DH.txt  r2_base.txt
config/lego_tasks/steps/: R_seq.json  R_steps.csv  S_10_11_steps.csv  S_12_13_seq.json  S_12_13_steps.csv  S_13_13_steps.csv  S_1_7_seq.json  S_seq.json  S_steps.csv  base_seq.json  base_steps.csv  big_chair_1_100_steps.csv  big_chair_1_38_seq.json  big_chair_seq.json  big_chair_steps.csv  bridge_23_23_steps.csv  bridge_seq.json  bridge_steps.csv  bridge_top_seq.json  bridge_top_steps.csv  chair_steps.csv  cliff_seq.json  cliff_steps.csv  cost_matrix_a.csv  cost_matrix_b.csv  delta_matrix.csv  faucet_seq.json  faucet_steps.csv  fish_high_12_14_seq.json  fish_high_16_16_steps.csv  fish_high_seq.json  fish_high_steps.csv  fish_steps.csv  guitar_1_3_seq.json  guitar_1_3_steps.csv  guitar_4_5_seq.json  guitar_6_24_seq.json  guitar_seq.json  guitar_steps.csv  lego_structure.json  (+25 more)
config/mag_block_tasks/: robot_properties.json  skillgraph.json
config/mag_block_tasks/assembly_tasks/: I.json  W.json  column_overhangs.json  llama.json  simple_stack.json  three_I.json
config/mag_block_tasks/env_setup/: env_setup_three_I.json
controller/include/: controller.h
demo/: detectandtransit.py
docker/: Dockerfile  build.sh  launch.sh  start_web_services.sh
docker_backup/: Dockerfile  launch.sh
docs/: BUILD_INSTRUCTIONS.md  MAGBLOCK_EXTENSIONS.md  PATH_CONFIGURATION.md  README.md  ROS2_MIGRATION_PLAN.md  index.html  main_final.tex  styles.css
exe/: magblock_assembly_test.cpp  magblock_test_tpg.cpp  magblock_tpg.cpp  magblock_trajectory_test.cpp  minimal_moveit_backend_test.cpp  plan_lego.cpp  plan_magblock.cpp  stream_ddb.sh  test_magblock_assembly.cpp  test_magblock_skillgraph.cpp  webplan_lego.cpp
executor/: README.md  cli.py  errors.py  executor.py  io.py  normalize.py  validate.py
executor/backends/: __init__.py  dryrun.py  mujoco_sim.py  ros_service.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
launch/: magblock_assembly.launch.py  magblock_assembly_executor.launch.py  magblock_assembly_quiet.launch.py  magblock_assembly_test.launch.py  task_planning_chaitanya_node.launch
log/: latest_build
planner/: adg.cpp  planner.cpp  planner.h  task_graph.cpp  tpg.cpp
planner/include/: adg.h  planner.h  task_graph.h  tpg.h  utils.h
planner/src/: adg.cpp  planner.cpp  task_graph.cpp  tpg.cpp  utils.cpp
scripts/: lego_infer_node.py  magblock_assembly_simulation.py  pick_place_classify_node.py  test_magblock_assembly.py  test_moveit_execution.py  test_trajectory_visualization.py  test_trajectory_viz.py
skillgraph/: api.html  server.py
skillgraph/api/: algorithms.hpp  backend.hpp  data_structure.hpp  environment.hpp  metrics.hpp  objects.hpp  robots.hpp  skillgraph.hpp  skillplan.hpp  skills.hpp  symbolic_state.hpp  tasks.hpp
skillgraph/api/Utils/: Common.hpp  Logger.hpp  Math.hpp  PathUtils.hpp
skillgraph/include/: RobotControl.hpp  algorithms.hpp  backend.hpp  environment.hpp  lego_algorithms.hpp  metrics.hpp  moveit_backend.hpp  moveit_env.hpp  object.hpp  robots.hpp  robots_env.hpp  rrt_algorithm.hpp  skillgraph.hpp  skills.hpp  task_def.hpp  task_definition.hpp  tasks.hpp
skillgraph/include/Utils/: Common.hpp  FileIO.hpp  Logger.hpp  Math.hpp  PathUtils.hpp
skillgraph/include/lego/: Lego.hpp  Lego_old.hpp  lego_algorithms.hpp  lego_objects.hpp  lego_pddl_state.hpp  lego_skillgraph.hpp  lego_skills.hpp  lego_tasks.hpp
skillgraph/include/magblock/: magblock_algorithms.hpp  magblock_skillgraph.hpp  magblock_skills.hpp  magblock_tasks.hpp
skillgraph/include/perception/: perception_skill.hpp
skillgraph/include/ros_compat/: launch.hpp  node.hpp  publisher.hpp  service_client.hpp  subscriber.hpp  time.hpp
skillgraph/pddl/: domain.pddl
skillgraph/src/: RobotControl.cpp  backend.cpp  data_structure.cpp  environment.cpp  lego_algorithms.cpp  lego_skillgraph.cpp  metrics.cpp  moveit_backend.cpp  moveit_env.cpp  object.cpp  objects.cpp  robots.cpp  robots_env.cpp  rrt_algorithm.cpp  skillgraph.cpp  skillplan.cpp  skills.cpp  symbolic_state.cpp  task_def.cpp  tasks.cpp
skillgraph/src/Utils/: FileIO.cpp  Logger.cpp  Math.cpp  PathUtils.cpp
src/: magblock_assembly_executor.cpp
test_tpg_output/: activity_graph.txt  adg.dot  tpg.dot
tools/: README.md
webpage/: api.html  run_backend.sh  server.py  test_web_skill_sequence.py
(+138 files in other folders)
